<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_application_id" translatable="false">237274790548784</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb237274790548784</string>
    <string name="twitter_consumer_key" translatable="false">Zyv9SeTbWyzEc5zJQ1lz6JTk8</string>
    <string name="twitter_consumer_secret" translatable="false">uWwCCPDPJy2ulIJjODWcDhGmOQInGNoqqeLoCQbIPo8ZF35950</string>
    <string name="googlemaps_api">AIzaSyCuLEwa0AV7nGr26_yFIS57Vf9eEZOjvlQ</string>

    <string name="map_style">
        [
  {
    "featureType": "poi",
     "elementType": "labels",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  }
]
    </string>

    <string name="app_name">Go4Lunch</string>
    <string name="app_description">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="base_activity_title">I\'m Hungry!</string>

    <string name="button_login_email">Sign in with your Email</string>
    <string name="button_login_facebook">Sign in with Facebook</string>
    <string name="button_login_google">Sign in with Google</string>
    <string name="button_login_twitter">Sign in with Twitter</string>

    <string name="authentication_success">Authentication success</string>
    <string name="authentication_canceled">Authentication canceled</string>
    <string name="no_internet">Device not connected to the internet</string>
    <string name="unknown_error">Unknown error</string>

    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="toolbar_menu_search">Search</string>
    <string name="drawer_lunch">MY LUNCH</string>
    <string name="drawer_settings">SETTINGS</string>
    <string name="drawer_logout">LOGOUT</string>
    <string name="no_restaurant_chosen">No restaurant chosen</string>
    <string name="autocomplete_hint">Search restaurants</string>

    <string name="bottom_nav_map">Map View</string>
    <string name="bottom_nav_list">List View</string>
    <string name="bottom_nav_workmates">Workmates</string>

    <string name="restaurant_distance">%1$sm</string>
    <string name="restaurant_people_count">(%1d)</string>
    <string name="restaurant_hours_no_info">No info on opening times</string>
    <string name="restaurant_hours_open">Open\u0020</string>
    <string name="restaurant_hours_until">until\u0020</string>
    <string name="restaurant_hours_closed">Closed</string>

    <string name="restaurant_card_call">CALL</string>
    <string name="restaurant_card_like">LIKE</string>
    <string name="restaurant_card_website">WEBSITE</string>
    <string name="restaurant_card_liked">LIKED!</string>
    <string name="no_website">There is no website for this restaurant</string>

    <string name="restaurant_card_recycler_item_workmate_name_is_joining">%1$s is joining!</string>
    <string name="workmate_recycler_view_eating_at">%1$s is eating at %2$s</string>
    <string name="workmate_hasnt_decided">%1$s hasn\'t decided yet</string>

    <string name="enable_notifications">Enable notifications</string>
    <string name="notification_title">Lunch time!</string>
    <string name="notification_today">Today you will eat at </string>
    <string name="notification_coworkers">These coworkers will be joining you: </string>
    <string name="notification_alone">You will be eating alone.</string>


</resources>
