<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/resto"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_restaurant"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#FFF"
            android:textSize="60sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="-30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textColor="#FFF"
            android:textSize="11sp"
            android:textStyle="italic"
            android:layout_gravity="center"
            android:layout_marginTop="-15dp"/>

        <Button
            android:id="@+id/main_activity_button_login_facebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin_start"
            android:layout_marginEnd="@dimen/button_margin_end"
            android:layout_marginTop="100dp"
            android:background="@drawable/btn_rounded_facebook"
            style="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
            android:text="@string/button_login_facebook"
            android:textAlignment="center"
            android:textSize="@dimen/button_text_size"
            android:drawableStart="@drawable/ic_fb"
            android:paddingStart="@dimen/button_padding_start"/>

        <Button
            android:id="@+id/main_activity_button_login_google"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin_start"
            android:layout_marginEnd="@dimen/button_margin_end"
            android:layout_marginTop="10dp"
            style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
            android:background="@drawable/btn_rounded_google"
            android:text="@string/button_login_google"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="@dimen/button_text_size"
            android:drawableStart="@drawable/ic_google"
            android:paddingStart="@dimen/button_padding_start"/>


    </LinearLayout>

</RelativeLayout>