<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.RestaurantCardActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/restaurant_card_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/restaurant_card_photo_height" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/restaurant_card_colored_part_height"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingStart="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/restaurant_card_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textColor="@color/quantum_white_text"
                android:textSize="@dimen/restaurant_card_name_size"
                android:layout_marginTop="-3dp"
                android:layout_marginEnd="10dp"/>

            <ImageView
                android:id="@+id/restaurant_card_rating1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_yellow_star"
                android:visibility="visible"/>

            <ImageView
                android:id="@+id/restaurant_card_rating2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_yellow_star"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/restaurant_card_rating3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_yellow_star"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/restaurant_card_rating4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_yellow_star"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/restaurant_card_rating5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_yellow_star"
                android:visibility="gone"/>

        </LinearLayout>

        <TextView
            android:id="@+id/restaurant_card_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/quantum_white_text"
            android:textSize="@dimen/restaurant_card_address_size"
            android:layout_marginTop="12dp"
            android:text="12 rue machin"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/restaurant_card_icon_call"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/restaurant_card_icon_height"
            android:src="@drawable/ic_phone"/>

        <ImageView
            android:id="@+id/restaurant_card_icon_like"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/restaurant_card_icon_height"
            android:src="@drawable/ic_star"/>

        <ImageView
            android:id="@+id/restaurant_card_icon_website"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/restaurant_card_icon_height"
            android:src="@drawable/ic_web"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/restaurant_card_call"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="@dimen/restaurant_card_name_size"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/restaurant_card_like"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="@dimen/restaurant_card_name_size"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/restaurant_card_website"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="@dimen/restaurant_card_name_size"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/restaurant_card_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>